--- a/index.html
+++ b/index.html
@@ -1,36 +1,33 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-
   <head>
-    <meta charset='utf-8' />
-    <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-    <meta name="description" content="Collada2json : JSON format that aims to bridge the gap between COLLADA and WebGL" />
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <title>Collada2json by fabrobinet</title>
 
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
-
-    <title>Collada2json</title>
+    <link rel="stylesheet" href="stylesheets/styles.css">
+    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+    <!--[if lt IE 9]>
+    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
   </head>
-
   <body>
+    <div class="wrapper">
+      <header>
+        <h1>Collada2json</h1>
+        <p>JSON format that aims to bridge the gap between COLLADA and WebGL</p>
 
-    <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-          <a id="forkme_banner" href="https://github.com/Motorola-Mobility/collada2json">View on GitHub</a>
+        <p class="view"><a href="https://github.com/fabrobinet/collada2json">View the Project on GitHub <small>fabrobinet/collada2json</small></a></p>
 
-          <h1 id="project_title">Collada2json</h1>
-          <h2 id="project_tagline">JSON format that aims to bridge the gap between COLLADA and WebGL</h2>
 
-            <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/Motorola-Mobility/collada2json/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/Motorola-Mobility/collada2json/tarball/master">Download this project as a tar.gz file</a>
-            </section>
-        </header>
-    </div>
-
-    <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
+        <ul>
+          <li><a href="https://github.com/fabrobinet/collada2json/zipball/master">Download <strong>ZIP File</strong></a></li>
+          <li><a href="https://github.com/fabrobinet/collada2json/tarball/master">Download <strong>TAR Ball</strong></a></li>
+          <li><a href="https://github.com/fabrobinet/collada2json">View On <strong>GitHub</strong></a></li>
+        </ul>
+      </header>
+      <section>
         <h3>Welcome to GitHub Pages.</h3>
 
 <p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
@@ -58,17 +55,12 @@ $ git checkout gh-pages
 
 <p>Having trouble with Pages? Check out the documentation at <a href="http://help.github.com/pages">http://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
       </section>
-    </div>
-
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
-        <p class="copyright">Collada2json maintained by <a href="https://github.com/Motorola-Mobility">Motorola-Mobility</a></p>
-        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
+      <footer>
+        <p>This project is maintained by <a href="https://github.com/fabrobinet">fabrobinet</a></p>
+        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
       </footer>
     </div>
-
+    <script src="javascripts/scale.fix.js"></script>
     
-
   </body>
 </html>
